--- a/Interface Code/nbproject/project.properties
+++ b/Interface Code/nbproject/project.properties
@@ -76,7 +76,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=Interface_Code
-main.class=main.Start
+main.class=start.Start
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
